@@ -1,24 +1,0 @@
-# $NetBSD: Makefile,v 1.11 2013/05/31 12:40:52 wiz Exp $
-#
-
-DISTNAME=	Tie-File-0.98
-PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
-SVR4_PKGNAME=	p5tfi
-CATEGORIES=	textproc perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Tie/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/dist/Tie-File/
-COMMENT=	Access the lines of a disk file via a Perl array
-LICENSE=	${PERL5_LICENSE}
-
-PKG_INSTALLATION_TYPES=	overwrite pkgviews
-
-PERL5_PACKLIST=		auto/Tie/File/.packlist
-
-pre-configure:
-	${FIND} ${WRKSRC} -name "*.orig" -type f | ${XARGS} ${RM} -f
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
